# bazel-pandoc

./: BUILD.bazel  MODULE.bazel  WORKSPACE  non_module_deps.bzl  pandoc.bzl  repositories.bzl  toolchain.bzl
tests/: MODULE.bazel  WORKSPACE  resolved_deps.py
tests/docx_test/: BUILD.bazel
