load(":toolchain.bzl", "pandoc_toolchain")

exports_files(["README.md"])

# Precompiled Pandoc binaries provided by upstream.

toolchain_type(
    name = "pandoc_toolchain_type",
    visibility = ["//visibility:public"],
)

pandoc_toolchain(
    compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "linux-x86_64",
)

pandoc_toolchain(
    compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:x86_64",
    ],
    platform = "macOS",
)

pandoc_toolchain(
    compatible_with = [
        "@bazel_tools//platforms:osx",
        "@bazel_tools//platforms:aarch64",
    ],
    platform = "osx-arm",
)
