load(":toolchain.bzl", "pandoc_toolchain")

exports_files(["README.md"])

# Precompiled Pandoc binaries provided by upstream.

toolchain_type(
    name = "pandoc_toolchain_type",
    visibility = ["//visibility:public"],
)

pandoc_toolchain(
    compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    platform = "linux-x86_64",
)

pandoc_toolchain(
    compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    platform = "macOS",
)

pandoc_toolchain(
    compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:aarch64",
    ],
    platform = "osx-arm",
)
